@startuml
'https://plantuml.com/class-diagram

entity Country {
* alpha2_code
--
* alpha3_code
* capital
* country
* continent
* population
* latitude
* longitude
}

entity Port {
* id_port
--
* name
* country_code
* latitude
* longitude
* capacity
}

entity Sea_Distance {
* id_port1
* id_port2
--
* distance
}

Sea_Distance ||--|{ Port
Sea_Distance ||--|{ Port
Country ||--o{ Port


@enduml